--- a/practice.ipynb
+++ b/practice.ipynb
@@ -24,6 +24,116 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "eeb345ff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,2,3]\n",
+    "b = a[:]\n",
+    "b.append(4)\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7907cf90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 2, 9, 1]\n",
+      "[1, 2, 5, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [5,2,9,1]\n",
+    "y = sorted(x)\n",
+    "print(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c4811643",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1, 2, 3]\n",
+    "print(x * 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "15b791fe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 3, 2, 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [4,3,2,1]\n",
+    "nums.sort(reverse=True)\n",
+    "print(nums)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9bbd6625",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'd', 'b', 'c']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [\"a\", \"b\", \"c\"]\n",
+    "x.insert(1, \"d\")\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ca21d74",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "0520fc0f",
    "metadata": {},
    "outputs": [
@@ -505,11 +615,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cdb800bb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 1, 2, 3, 1, 2, 3, 1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1, 2, 3]\n",
+    "print(x * 4)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "0505a1eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 2, 9, 1]\n",
+      "[1, 2, 5, 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [5, 2, 9, 1]\n",
+    "y = sorted(x)\n",
+    "print(x)\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "92600fd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [1, 2, 3]; my_list.remove(2)\n",
+    "print(my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "38ef63f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [4, 3, 2, 1]\n",
+    "nums.sort(reverse=False)\n",
+    "print(nums)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "feb69f7b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = {1, 2, 3}\n",
+    "b = {3, 4, 5}\n",
+    "print(a & b) \n"
+   ]
   }
  ],
  "metadata": {
