--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "15097880",
    "metadata": {},
    "outputs": [
@@ -1257,7 +1257,7 @@
     "\n",
     "double_list = list(map(lambda x: x*2 , my_list ))\n",
     "print(my_list)\n",
-    "print(double_list)"
+    "print(double_list)\n"
    ]
   },
   {
