--- a/Day-03.ipynb
+++ b/Day-03.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "242eec34",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
     }
    ],
    "source": [
-    "absolute_value = n = -5   #Turnary Operator\n",
+    "n = -5   #Turnary Operator\n",
     "\n",
     "absolute_value = n if n >= 0 else -n\n",
     "print(absolute_value)"
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f3c99f7c",
    "metadata": {},
    "outputs": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "id": "af81f8ec",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Friday\n"
+      "Tuesday\n"
      ]
     }
    ],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4943ff31",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "id": "d731f299",
    "metadata": {},
    "outputs": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "7f1e24c4",
    "metadata": {},
    "outputs": [
@@ -329,14 +329,7 @@
       "1\n",
       "4\n",
       "9\n",
-      "16\n",
-      "25\n",
-      "36\n",
-      "49\n",
-      "64\n",
-      "81\n",
-      "100\n",
-      "121\n"
+      "16\n"
      ]
     }
    ],
@@ -352,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "b311f9e0",
    "metadata": {},
    "outputs": [
@@ -363,23 +356,7 @@
       "1\n",
       "4\n",
       "9\n",
-      "16\n",
-      "25\n",
-      "36\n",
-      "49\n",
-      "64\n",
-      "81\n",
-      "100\n",
-      "121\n",
-      "144\n",
-      "169\n",
-      "196\n",
-      "225\n",
-      "256\n",
-      "289\n",
-      "324\n",
-      "361\n",
-      "400\n"
+      "16\n"
      ]
     }
    ],
@@ -392,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "8515c41c",
    "metadata": {},
    "outputs": [
@@ -400,7 +377,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "1\n",
+      "4\n"
      ]
     }
    ],
@@ -420,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "9a0f216b",
    "metadata": {},
    "outputs": [
@@ -550,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "fdbbd268",
    "metadata": {},
    "outputs": [
@@ -572,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "7d4f4455",
    "metadata": {},
    "outputs": [
@@ -580,7 +558,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]\n"
+      "Enter a positive number\n",
+      "[1, 4, 9, 16]\n"
      ]
     }
    ],
@@ -599,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "7bac05fa",
    "metadata": {},
    "outputs": [],
