--- a/Day-05.ipynb
+++ b/Day-05.ipynb
@@ -327,7 +327,7 @@
     "    def describe(self):\n",
     "        area = self.area()\n",
     "        perimeter = self.get_perimeter()\n",
-    "        print(f\"The area is {area} and the perimeter is {perimeter}\")\n",
+    "        print(f\"The area is {area} and the perimeter is {perimeter}\")  #calling the instance in instance method\n",
     "\n",
     "rectangle = Rectangle(10, 5)\n",
     "rectangle.describe()"
