--- a/Day-06.ipynb
+++ b/Day-06.ipynb
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 3,
    "id": "c129bfa7",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,9 @@
       "Hi Guys! Hope everthing is good. I'm fine too.\n",
       "This is much better.\n",
       "This is even better.\n",
-      "I love AI.\n"
+      "I love AI.\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -331,8 +333,8 @@
     "\n",
     "file_1 = open (\"my_file.txt\")   # Open file\n",
     "\n",
-    "read_coontent = file_1.read()   # Read file\n",
-    "print(read_coontent)\n",
+    "read_content = file_1.read()   # Read file\n",
+    "print(read_content)\n",
     "\n",
     "file_1.close()  # Close file\n"
    ]
@@ -517,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "4a684365",
    "metadata": {},
    "outputs": [],
@@ -571,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "id": "b6a090eb",
    "metadata": {},
    "outputs": [],
@@ -585,7 +587,8 @@
     "}\n",
     "\n",
     "with open (\"myson.json\", \"w\") as json_file:\n",
-    "    json.dump(data, json_file, indent=4)\n",
+    "    json.dump(data, json_file, indent=4)  # dump is a method that writes the data to the file  , indent =4 is for indentation that is 4 spaces \n",
+    "\n",
     "\n"
    ]
   },
@@ -649,46 +652,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": null,
    "id": "65d8780f",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "dict contains fields not in fieldnames: 'city'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[149]\u001b[39m\u001b[32m, line 18\u001b[39m\n\u001b[32m     16\u001b[39m writer = csv.DictWriter(csv_file, fieldnames=fieldnames)\n\u001b[32m     17\u001b[39m writer.writeheader()\n\u001b[32m---> \u001b[39m\u001b[32m18\u001b[39m \u001b[43mwriter\u001b[49m\u001b[43m.\u001b[49m\u001b[43mwriterows\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Voshadee\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\csv.py:229\u001b[39m, in \u001b[36mDictWriter.writerows\u001b[39m\u001b[34m(self, rowdicts)\u001b[39m\n\u001b[32m    228\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mwriterows\u001b[39m(\u001b[38;5;28mself\u001b[39m, rowdicts):\n\u001b[32m--> \u001b[39m\u001b[32m229\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mwriter\u001b[49m\u001b[43m.\u001b[49m\u001b[43mwriterows\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mmap\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_dict_to_list\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mrowdicts\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mFile \u001b[39m\u001b[32mc:\\Users\\Voshadee\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\csv.py:221\u001b[39m, in \u001b[36mDictWriter._dict_to_list\u001b[39m\u001b[34m(self, rowdict)\u001b[39m\n\u001b[32m    219\u001b[39m     wrong_fields = rowdict.keys() - \u001b[38;5;28mself\u001b[39m.fieldnames\n\u001b[32m    220\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m wrong_fields:\n\u001b[32m--> \u001b[39m\u001b[32m221\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33m\"\u001b[39m\u001b[33mdict contains fields not in fieldnames: \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    222\u001b[39m                          + \u001b[33m\"\u001b[39m\u001b[33m, \u001b[39m\u001b[33m\"\u001b[39m.join([\u001b[38;5;28mrepr\u001b[39m(x) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m wrong_fields]))\n\u001b[32m    223\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m (rowdict.get(key, \u001b[38;5;28mself\u001b[39m.restval) \u001b[38;5;28;01mfor\u001b[39;00m key \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m.fieldnames)\n",
-      "\u001b[31mValueError\u001b[39m: dict contains fields not in fieldnames: 'city'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import csv\n",
     "\n",
-    "# Data to be load  wrritten to CSV\n",
+    "# Data to be written to CSV\n",
     "data = [\n",
-    "    {\"Name\": \"John Doe\", \"Age\": \"30\", \"city\": \"New York\"},\n",
-    "    {\"Name\": \"Jane Smith\", \"Age\": \"25\", \"city\": \"Los Angeles\"},\n",
-    "    {\"Name\": \"Bob Johnson\", \"Age\": \"40\", \"city\": \"Chicago\"}\n",
-    "  \n",
+    "    {\"Name\": \"John Doe\", \"Age\": \"30\", \"City\": \"New York\"},  \n",
+    "    {\"Name\": \"Jane Smith\", \"Age\": \"25\", \"City\": \"Los Angeles\"},\n",
+    "    {\"Name\": \"Bob Johnson\", \"Age\": \"40\", \"City\": \"Chicago\"}\n",
     "]\n",
     "\n",
-    "# Define the CSV fieldnames \n",
+    "# Define the CSV fieldnames\n",
     "fieldnames = [\"Name\", \"Age\", \"City\"]\n",
     "\n",
-    "\n",
+    "# Write to CSV file\n",
     "with open(\"my_csv.csv\", \"w\", newline=\"\") as csv_file:\n",
     "    writer = csv.DictWriter(csv_file, fieldnames=fieldnames)\n",
     "    writer.writeheader()\n",
-    "    writer.writerows(data)\n",
-    "\n",
-    "\n",
-    "   \n"
+    "    writer.writerows(data)"
    ]
   }
  ],
