--- a/practice.ipynb
+++ b/practice.ipynb
@@ -1294,6 +1294,31 @@
     "max_number = lambda a,b : a if a> b else b \n",
     "print(max_number(100,50))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "79445d6b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (4240785294.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[4]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mprint{f\"The price is ${price:.2f}\" where price = 10.99}\u001b[39m\n          ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid syntax. Perhaps you forgot a comma?\n"
+     ]
+    }
+   ],
+   "source": [
+    "print{f\"The price is ${price:.2f}\" where price = 10.99}\n",
+    "\n",
+    "print{f\"The price is {price:.2f}\" where price = 10.99}\n",
+    "\n",
+    "print{f\"The price is ${price:2f}\" where price = 10.99}\n",
+    "\n",
+    "print{f\"The price is {price:.2}\" where price = 10.99}"
+   ]
   }
  ],
  "metadata": {
